added_signin Login

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ section{
     font-size: 1.7rem;
     color:#fff;
     background: var(--main-color);
-    cursor: pointer;
+    cursor:-moz-zoom-out;
 }
 
 .btn:hover{
@@ -84,13 +84,6 @@ section{
     z-index: 1000;
 }
 
-/*sign in log in */
-
-.header ul{
-    display: flex;
-    
-}
-
 .header .logo img{
     height: 9rem;
 }
@@ -99,9 +92,23 @@ section{
     margin:0 1rem;
     font-size: 1.6rem;
     color:#fff;
+    font-size: 2rem;
 }
 
 .header .navbar a:hover{
+    color:var(--main-color);
+    border-bottom: .1rem solid var(--main-color);
+    padding-bottom: .5rem;
+}
+
+.header .navbar_s a{
+    margin:0 1rem;
+    font-size: 1.6rem;
+    color:#fff;
+    font-size: 2rem;
+}
+
+.header .navbar_s a:hover{
     color:var(--main-color);
     border-bottom: .1rem solid var(--main-color);
     padding-bottom: .5rem;
