--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ section{
 
 .header .navbar a{
     margin:0 1rem;
-    font-size: 1.6rem;
+    font-size: 1rem;
     color:#fff;
     font-size: 2rem;
 }
@@ -103,9 +103,8 @@ section{
 
 .header .navbar_s a{
     margin:0 1rem;
-    font-size: 1.6rem;
-    color:#fff;
     font-size: 2rem;
+    color:#fff;
 }
 
 .header .navbar_s a:hover{
@@ -248,7 +247,7 @@ section{
 }
 
   
-  .auth-buttons button {
+.auth-buttons button {
     background-color: white;
     color: #007bff;
     border: none;
@@ -256,11 +255,11 @@ section{
     padding: 10px;
     cursor: pointer;
     margin-left: 20px;
-  }
+}
   
-  .auth-buttons button:hover {
+.auth-buttons button:hover {
     background-color: #f1f1f1;
-  }
+}
   
 /* about section start */
 
@@ -554,6 +553,7 @@ section{
 }
 
 /* media queries  */
+
 @media (max-width:991px){
 
     html{
@@ -570,8 +570,9 @@ section{
 
 }
 
-@media (max-width:768px){
-
+@media (min-width:2008px)
+/* @media (max-width:768px){ */
+{
     #menu-btn{
         display: inline-block;
     }
@@ -624,3 +625,26 @@ section{
     }
 
 }
+
+/* @media screen and (max-width: 300px) {
+    .header a:not(:first-child) {display: none;}
+    .header a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 300px) {
+    .header.responsive {position: relative;}
+    .header.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .header.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  } */
+  
